--- a/src/locale/messages.ru.xlf
+++ b/src/locale/messages.ru.xlf
@@ -828,6 +828,134 @@
           <context context-type="linenumber">27,28</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="privacy-policy-h-1" datatype="html">
+        <source>lora.commandus.com Privacy Policy</source>
+        <target>Политика конфиденциальности lora.commandus.com</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">2,3</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-1" datatype="html">
+        <source> At lora.commandus.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by lora.commandus.com and how we use it. If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us via our Github page. </source>
+        <target> Одним из наших главных приоритетов является конфиденциальность наших посетителей. Этот документ о Политике конфиденциальности содержит типы информации, которую собирает и записывает lora.commandus.com, а также способы ее использования. Если у вас есть дополнительные вопросы или вам нужна дополнительная информация о нашей Политике конфиденциальности, не стесняйтесь обращаться к нам через нашу страницу Github. </target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">4,7</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-h-2" datatype="html">
+        <source>Log Files</source>
+        <target>Лог-файлы</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">9,10</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-2" datatype="html">
+        <source> lora.commandus.com follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services&apos; analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users&apos; movement on the website, and gathering demographic information. </source>
+        <target> lora.commandus.com следует стандартной процедуре использования файлов журналов. Эти файлы регистрируют посетителей, когда они посещают веб-сайты. Этим занимаются все хостинговые компании и часть аналитики хостинг-услуг. Информация, собираемая файлами журналов, включает адреса интернет-протокола (IP), тип браузера, поставщика интернет-услуг (ISP), отметку даты и времени, страницы перехода/выхода и, возможно, количество кликов. Они не связаны с какой-либо информацией, позволяющей идентифицировать личность. Целью информации является анализ тенденций, администрирование сайта, отслеживание перемещений пользователей по сайту и сбор демографической информации. </target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">11,16</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-h-3" datatype="html">
+        <source>Cookies and Web Beacons</source>
+        <target>Файлы cookie и веб-маяки</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">18,19</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-3" datatype="html">
+        <source> Like any other website, lora.commandus.com uses &apos;cookies&apos;. These cookies are used to store information including visitors&apos; preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users&apos; experience by customizing our web page content based on visitors&apos; browser type and/or other information. </source>
+        <target> Как и любой другой веб-сайт, lora.commandus.com использует файлы cookie. Эти файлы cookie используются для хранения информации, включая предпочтения посетителей, а также страницы веб-сайта, к которым посетитель обращался или посещал. Эта информация используется для оптимизации работы пользователей путем настройки содержимого нашей веб-страницы на основе типа браузера посетителей и/или другой информации. </target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">20,23</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-h-4" datatype="html">
+        <source>Our Advertising Partners</source>
+        <target>Наши рекламные партнеры</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">25,26</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-4" datatype="html">
+        <source> Some of advertisers on our site may use cookies and web beacons. Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on lora.commandus.com, which are sent directly to users&apos; browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit. Note that lora.commandus.com has no access to or control over these cookies that are used by third-party advertisers. </source>
+        <target> Некоторые рекламодатели на нашем сайте могут использовать файлы cookie и веб-маяки. Сторонние рекламные серверы или рекламные сети используют такие технологии, как файлы cookie, JavaScript или веб-маяки, которые используются в соответствующих рекламных объявлениях и ссылках, которые появляются на lora.commandus.com и отправляются непосредственно в браузер пользователей. Когда это происходит, они автоматически получают ваш IP-адрес. Эти технологии используются для измерения эффективности рекламных кампаний и/или для персонализации рекламного контента, который вы видите на посещаемых вами веб-сайтах. Обратите внимание, что lora.commandus.com не имеет доступа и контроля над этими файлами cookie, которые используются сторонними рекламодателями. </target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">27,33</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-h-5" datatype="html">
+        <source>Third Part Privacy Policies</source>
+        <target>Политика конфиденциальности третьих сторон</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">36,37</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-5" datatype="html">
+        <source> lora.commandus.com&apos;s Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options. You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers&apos; respective websites. </source>
+        <target> Политика конфиденциальности lora.commandus.com не распространяется на других рекламодателей или веб-сайты. Поэтому мы советуем вам ознакомиться с соответствующей Политикой конфиденциальности этих сторонних рекламных серверов для получения более подробной информации. Он может включать их методы и инструкции о том, как отказаться от определенных опций. Вы можете отключить файлы cookie в настройках вашего браузера. Более подробную информацию об управлении файлами cookie в конкретных веб-браузерах можно найти на веб-сайтах соответствующих браузеров. </target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">38,42</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-h-6" datatype="html">
+        <source>Children&apos;s Information</source>
+        <target>Детская информация</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">44,45</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-6" datatype="html">
+        <source> Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity. lora.commandus.com does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records. </source>
+        <target> Еще одна часть нашего приоритета — обеспечение защиты детей при использовании Интернета. Мы призываем родителей и опекунов наблюдать, участвовать и/или контролировать и направлять их онлайн-активность. lora.commandus.com сознательно не собирает какую-либо личную информацию от детей в возрасте до 13 лет. Если вы считаете, что ваш ребенок предоставил такого рода информацию на нашем веб-сайте, мы настоятельно рекомендуем вам немедленно связаться с нами, и мы сделаем все возможные усилия по быстрому удалению такой информации из наших записей. </target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">46,50</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-h-7" datatype="html">
+        <source>Online Privacy Policy Only</source>
+        <target>Область применения политики конфиденциальности</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">52,53</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-7" datatype="html">
+        <source> This privacy policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in lora.commandus.com. This policy is not applicable to any information collected offline or via channels other than this website. </source>
+        <target>Эта политика конфиденциальности применяется только к нашей онлайн-деятельности и действительна для посетителей нашего веб-сайта в отношении информации, которую они поделились и/или собрали на lora.commandus.com. Эта политика не применима к какой-либо информации, собранной офлайн или по каналам, отличным от этого веб-сайта. </target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">54,57</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-h-8" datatype="html">
+        <source>Consent</source>
+        <target>Согласие</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">58,59</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-8" datatype="html">
+        <source> By using our website, you hereby consent to our Privacy Policy and agree to its terms and conditions. </source>
+        <target> Используя наш веб-сайт, вы тем самым соглашаетесь с нашей Политикой конфиденциальности и соглашаетесь с ее условиями. </target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">60,62</context>
+        </context-group>
+      </trans-unit>      >
       <trans-unit id="menu" datatype="html">
         <source>Menu</source>
         <target>Меню</target>
@@ -864,6 +992,15 @@
           <context context-type="linenumber">11</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="privacy-policy-menu" datatype="html">
+        <source>Privacy policy</source>
+        <target>Политика конфиденциальности</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/top-menu/top-menu.component.html</context>
+          <context context-type="linenumber">12,14</context>
+        </context-group>
+      </trans-unit>
+
       <trans-unit id="sidebar" datatype="html">
         <source>Sidebar</source>
         <target>Боковое меню</target>
