--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -748,6 +748,118 @@
           <context context-type="linenumber">33,34</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="privacy-policy-h-1" datatype="html">
+        <source>lora.commandus.com Privacy Policy</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">2,3</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-1" datatype="html">
+        <source> At lora.commandus.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by lora.commandus.com and how we use it. If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us via our Github page. </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">4,7</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-h-2" datatype="html">
+        <source>Log Files</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">9,10</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-2" datatype="html">
+        <source> lora.commandus.com follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services&apos; analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users&apos; movement on the website, and gathering demographic information. </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">11,16</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-h-3" datatype="html">
+        <source>Cookies and Web Beacons</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">18,19</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-3" datatype="html">
+        <source> Like any other website, lora.commandus.com uses &apos;cookies&apos;. These cookies are used to store information including visitors&apos; preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users&apos; experience by customizing our web page content based on visitors&apos; browser type and/or other information. </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">20,23</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-h-4" datatype="html">
+        <source>Our Advertising Partners</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">25,26</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-4" datatype="html">
+        <source> Some of advertisers on our site may use cookies and web beacons. Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on lora.commandus.com, which are sent directly to users&apos; browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit. Note that lora.commandus.com has no access to or control over these cookies that are used by third-party advertisers. </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">27,33</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-h-5" datatype="html">
+        <source>Third Part Privacy Policies</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">36,37</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-5" datatype="html">
+        <source> lora.commandus.com&apos;s Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options. You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers&apos; respective websites. </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">38,42</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-h-6" datatype="html">
+        <source>Children&apos;s Information</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">44,45</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-6" datatype="html">
+        <source> Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity. lora.commandus.com does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records. </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">46,50</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-h-7" datatype="html">
+        <source>Online Privacy Policy Only</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">52,53</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-7" datatype="html">
+        <source> This privacy policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in lora.commandus.com. This policy is not applicable to any information collected offline or via channels other than this website. </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">54,57</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-h-8" datatype="html">
+        <source>Consent</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">58,59</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-8" datatype="html">
+        <source> By using our website, you hereby consent to our Privacy Policy and agree to its terms and conditions. </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/privacy-policy/privacy-policy.component.html</context>
+          <context context-type="linenumber">60,62</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="menu" datatype="html">
         <source>Menu</source>
         <context-group purpose="location">
@@ -778,6 +890,13 @@
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/top-menu/top-menu.component.html</context>
           <context context-type="linenumber">11</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="privacy-policy-menu" datatype="html">
+        <source>Privacy policy</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/top-menu/top-menu.component.html</context>
+          <context context-type="linenumber">12,14</context>
         </context-group>
       </trans-unit>
       <trans-unit id="sidebar" datatype="html">
