--- a/src/locale/messages.ru.xlf
+++ b/src/locale/messages.ru.xlf
@@ -1062,8 +1062,22 @@
           <context context-type="linenumber">63</context>
         </context-group>
       </trans-unit>
-
-
+      <trans-unit id="web-push-toggle-hint" datatype="html">
+        <source>Turn notifications on/off</source>
+        <target>Включить/выключить уведомления</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/subscribe/subscribe.component.html</context>
+          <context context-type="linenumber">3</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="web-push-toggle" datatype="html">
+        <source>Turn notifications on/off</source>
+        <target>Включить/выключить уведомления</target>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/subscribe/subscribe.component.html</context>
+          <context context-type="linenumber">3,4</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="privacy-policy-h-8" datatype="html">
         <source>Consent</source>
         <target>Согласие</target>
